--- a/HTML CSS/index.html
+++ b/HTML CSS/index.html
@@ -5,19 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="main.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>코딩애플 🍎</h1>
-    <h3>HTML/CSS</h3>
-    <!-- 숙제! 이동하기 누르면 네이버로 이동하기 -->
-    <p>안녕하세요 <a href="https://www.naver.com">이동하기</a></p>
-    <button>Button</button>
-    <a href="https://www.google.co.kr/">Google</a>
-    <ul>
-      <li>항목1</li>
-      <li>항목2</li>
-      <li>항목3</li>
-    </ul>
-    <img src="test.jpeg" width="400px" />
+    <img src="test.jpeg" class="profile" />
+    <h3 class="title">NCT DREAM</h3>
+    <p style="text-align: center">K-pop star</p>
   </body>
 </html>
