--- a/HTML CSS/index.html
+++ b/HTML CSS/index.html
@@ -10,6 +10,9 @@
   <body>
     <img src="test.jpeg" class="profile" />
     <h3 class="title">NCT DREAM</h3>
-    <p style="text-align: center">K-pop star</p>
+    <p class="content">K-pop star</p>
+    <div class="box">
+      <p class="content">요드림 쩔어주자 화이팅</p>
+    </div>
   </body>
 </html>
