--- a/HTML CSS/index.html
+++ b/HTML CSS/index.html
@@ -8,7 +8,7 @@
     <link href="main.css" rel="stylesheet" />
   </head>
   <body>
-    <img src="test.jpeg" class="profile" />
+    <img src="img/test.jpeg" class="profile" />
     <h3 class="title">NCT DREAM</h3>
     <p class="content">K-pop star</p>
     <div class="box">
