--- a/HTML CSS/practice.html
+++ b/HTML CSS/practice.html
@@ -7,5 +7,29 @@
     <title>Document</title>
     <link href="practice.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="blog-content">
+        <div>
+          <img
+            class="blog-profile"
+            src="img/mark.webp"
+            style="height: 50px; border-radius: 50%"
+          />
+          <div class="blog-name">
+            <h4 style="margin: 6px">이마크</h4>
+            <p style="font-size: 12px; margin: 6px">1시간 전</p>
+          </div>
+        </div>
+        <div class="content">
+          <h4 style="margin-top: 70px">cafe the dream</h4>
+          <p style="font-size: 12px">너무 예쁜 카페를 찾았어요!</p>
+        </div>
+      </div>
+
+      <div class="blog-image">
+        <img src="img/test.jpeg" style="width: 200px" />
+      </div>
+    </div>
+  </body>
 </html>
