--- a/HTML CSS/layout1.html
+++ b/HTML CSS/layout1.html
@@ -5,14 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/layout.css" rel="stylesheet" />
   </head>
   <body>
+    <nav>
+      <ul class="navbar">
+        <li><a href="#">맛집</a></li>
+        <li><a href="#">디저트</a></li>
+        <li><a href="#">영화</a></li>
+        <li><a href="#">케이팝</a></li>
+      </ul>
+    </nav>
+
     <div class="container">
-      <div class="header"></div>
-      <div class="left-menu"></div>
-      <div class="right-menu"></div>
-      <div class="footer"></div>
+      <div class="blog-content">
+        <div>
+          <img
+            class="blog-profile"
+            src="img/mark.webp"
+            style="height: 50px; border-radius: 50%"
+          />
+          <div class="blog-name">
+            <h4 style="margin: 6px">이마크</h4>
+            <p style="font-size: 12px; margin: 6px">1시간 전</p>
+          </div>
+        </div>
+        <div class="content">
+          <h4 style="margin-top: 70px">cafe the dream</h4>
+          <p style="font-size: 12px">
+            너무 예쁜 카페를 찾았어요!<br />
+            우리 드림이들과 자주 가려구요. 알바생 분들도 너무 친절하시고 드림
+            친구들을 닮았어요. <br />
+            한 분이 컵을 깼는지 컵받침을 깼는지 모르겠지만 무튼 우당탕탕 꺠시고
+            친절하게 사과해주셨어요.
+          </p>
+        </div>
+      </div>
+
+      <div class="blog-image">
+        <img src="img/test.jpeg" style="width: 200px" />
+      </div>
     </div>
   </body>
 </html>
