--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="css/layout.css" rel="stylesheet" />
   </head>
-  <body>
+  <body style="margin: 0px">
     <div class="main-background">
       <h4 class="main-title">Have a Special Experience!</h4>
       <p class="detail-title">
@@ -15,7 +15,6 @@
         저희는 보라보라 여행사입니다:)<br />
         이번엔 어디로 떠나보시겠습니까?
       </p>
-      <br />
       <button>여행가기 ✈️</button>
     </div>
   </body>
