--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -16,6 +16,7 @@
         이번엔 어디로 떠나보시겠습니까?
       </p>
       <button>여행가기 ✈️</button>
+      <div class="second-background">안녕하세요 여러분</div>
     </div>
   </body>
 </html>
