width & box-sizing

--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -16,7 +16,15 @@
         이번엔 어디로 떠나보시겠습니까?
       </p>
       <button>여행가기 ✈️</button>
-      <div class="second-background">안녕하세요 여러분</div>
+    </div>
+    <div class="second-background">
+      <h4>Let's go on a trip 🧡</h4>
+      <p>바보는 방황하고, 현명한 사람은 여행한다.</p>
+    </div>
+    <br />
+    <div class="second-background" style="padding: 50px">
+      <h4>Let's go on a trip 🧡</h4>
+      <p>바보는 방황하고, 현명한 사람은 여행한다.</p>
     </div>
   </body>
 </html>
