--- a/HTML CSS/cart.html
+++ b/HTML CSS/cart.html
@@ -82,6 +82,8 @@
           <a href="#" class="editCart">Edit your shopping cart</a>
           <button class="chooseBtn">Choose payment method</button>
         </div>
+        <input class="input-test" />
+        <a class="custom-link" href="#">이동</a>
       </div>
     </div>
   </body>
