--- a/HTML CSS/cart.html
+++ b/HTML CSS/cart.html
@@ -86,5 +86,8 @@
         <a class="custom-link" href="#">이동</a>
       </div>
     </div>
+    <!-- 클래스 이름 짓기 -->
+    <button class="main-btn bg-pink">버튼1</button>
+    <button class="main-btn bg-blue">버튼2</button>
   </body>
 </html>
