--- a/HTML CSS/cart.html
+++ b/HTML CSS/cart.html
@@ -89,5 +89,13 @@
     <!-- 클래스 이름 짓기 -->
     <button class="main-btn bg-pink">버튼1</button>
     <button class="main-btn bg-blue">버튼2</button>
+
+    <div class="profile">
+      <img class="profile__img" />
+      <h4 class="profile__title"></h4>
+      <p class="profile__content"></p>
+      <button class="profile__btn--red"></button>
+      <button class="profile__btn--blue"></button>
+    </div>
   </body>
 </html>
