--- a/JavaScript JQuery/index.html
+++ b/JavaScript JQuery/index.html
@@ -11,9 +11,16 @@
       crossorigin="anonymous"
     />
     <link href="main.css" rel="stylesheet" />
+    <!-- JQuery 설치(설치한 곳 하단에서 JQuery 문법 사용 가능 -> 상단설치) -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <title>Hello, world!</title>
   </head>
   <body>
+    <!-- 진도 : 모달창만들기와 간단한 애니메이션 -->
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
         <span class="navbar-brand">Navbar</span>
@@ -29,13 +36,28 @@
       <li class="list-group-item">A fourth item</li>
       <li class="list-group-item">And a fifth one</li>
     </ul>
+    <p class="hi">Hello Everyone</p>
+    <p class="hi">Hello Everyone</p>
+    <p class="hi">Hello Everyone</p>
+    <button class="testBtn">Button</button>
     <script>
+      //document.querySelector(".hi").innerHTML = "안녕하세요";
+      $(".hi").html("안녕하세요");
+      $(".hi").css("color", "blue");
+      $(".hi").addClass("show");
+
+      $(".testBtn").on("click", function () {
+        $(".hi").fadeOut();
+      });
+
       document
         .querySelector(".navbar-toggle")[0]
         .addEventListener("click", function () {
           document.querySelector(".list-group").classList.toggle("show");
         });
     </script>
+
+    <!-- bootstrap설치 -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
