--- a/JavaScript JQuery/index.html
+++ b/JavaScript JQuery/index.html
@@ -20,7 +20,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <!-- 진도 : 모달창만들기와 간단한 애니메이션 -->
+    <!-- 진도 : 폼 만들며 배워보는 if else -->
     <div class="black-bg">
       <div class="white-bg">
         <h4>로그인하세요</h4>
@@ -53,11 +53,9 @@
         $(".black-bg").removeClass("show-modal");
       });
 
-      document
-        .querySelector(".navbar-toggle")[0]
-        .addEventListener("click", function () {
-          document.querySelector(".list-group").classList.toggle("show");
-        });
+      $(".navbar-toggler").on("click", function () {
+        $(".list-group").toggleClass("show-list");
+      });
     </script>
 
     <!-- bootstrap설치 -->
