--- a/JavaScript JQuery/index.html
+++ b/JavaScript JQuery/index.html
@@ -20,7 +20,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <!-- 진도 : input, change 이벤트와 and, or 연산자 -->
+    <!-- 진도 : Level2. 변수, 사칙연산 실력향상 과제 -->
     <div class="black-bg">
       <div class="white-bg">
         <h4>로그인하세요</h4>
@@ -80,7 +80,7 @@
       });
     </script>
 
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <span class="navbar-brand">JS practice</span>
         <button class="badge bg-dark">Dark 🌙</button>
