--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -8,6 +8,12 @@
     <link href="css/layout.css" rel="stylesheet" />
   </head>
   <body style="margin: 0px">
+    <div class="flex-container">
+      <div class="flex-item" style="flex-grow: 2">1</div>
+      <div class="flex-item">2</div>
+      <div class="flex-item">3</div>
+    </div>
+
     <div class="main-background">
       <h4 class="main-title">Have a Special Experience!</h4>
       <p class="detail-title">
