--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -8,10 +8,11 @@
     <link href="css/layout.css" rel="stylesheet" />
   </head>
   <body style="margin: 0px">
-    <div class="flex-container">
-      <div class="flex-item" style="flex-grow: 2">1</div>
-      <div class="flex-item">2</div>
-      <div class="flex-item">3</div>
+    <div class="nav-container">
+      <div class="nav-item">SKY travel agency</div>
+      <div style="flex-grow: 1"></div>
+      <div class="nav-item">product</div>
+      <div class="nav-item">services</div>
     </div>
 
     <div class="main-background">
