반응형레이아웃

--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="main-background">
-      <h4 class="main-title">Have a Special Experience!</h4>
+      <h4 class="main-title">Have a Special Experience! Now On Sale!</h4>
       <p class="detail-title">
         늘 고객을 위해 특별한 경험을 만들기 위해 노력하는 <br />
         저희는 보라보라 여행사입니다:)<br />
