반응형 연습

--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -28,5 +28,25 @@
       <h4>Let's go on a trip 🧡</h4>
       <p>바보는 방황하고, 현명한 사람은 여행한다.</p>
     </div>
+
+    <div class="explain-container">
+      <div>
+        <h4>Fast Departure</h4>
+        <p>SKY travel agency</p>
+      </div>
+      <div>
+        <h4>Good Service</h4>
+        <p>SKY travel agency</p>
+      </div>
+      <div>
+        <h4>Free Coupons</h4>
+        <p>SKY travel agency</p>
+      </div>
+      <div>
+        <h4>New Travel</h4>
+        <p>SKY travel agency</p>
+      </div>
+      <div style="float: none; clear: both"></div>
+    </div>
   </body>
 </html>
