--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="css/layout.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body style="margin: 0px">
     <div class="nav-container">
@@ -25,24 +32,28 @@
       <button>여행가기 ✈️</button>
     </div>
     <div class="second-background">
-      <h4>Let's go on a trip 🧡</h4>
+      <h3>Let's go on a trip 🧡</h3>
       <p>바보는 방황하고, 현명한 사람은 여행한다.</p>
     </div>
 
     <div class="explain-container">
       <div>
+        <i class="fa-solid fa-plane-departure fa-3x"></i>
         <h4>Fast Departure</h4>
         <p>SKY travel agency</p>
       </div>
       <div>
+        <i class="fa-solid fa-crown fa-3x"></i>
         <h4>Good Service</h4>
         <p>SKY travel agency</p>
       </div>
       <div>
+        <i class="fa-solid fa-comment-dollar fa-3x"></i>
         <h4>Free Coupons</h4>
         <p>SKY travel agency</p>
       </div>
       <div>
+        <i class="fa-solid fa-earth-americas fa-3x"></i>
         <h4>New Travel</h4>
         <p>SKY travel agency</p>
       </div>
