--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -59,5 +59,22 @@
       </div>
       <div style="float: none; clear: both"></div>
     </div>
+
+    <div class="shop-bg">
+      <div class="shop-container">
+        <div class="shop-item">
+          <div style="position: relative">
+            <div class="overlay"></div>
+            <img src="./img/item1.jpeg" />
+          </div>
+        </div>
+        <div class="shop-item">
+          <img src="./img/item2.jpeg" />
+        </div>
+        <div class="shop-item">
+          <img src="./img/item3.jpeg" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
