--- a/HTML CSS/layout2.html
+++ b/HTML CSS/layout2.html
@@ -64,7 +64,9 @@
       <div class="shop-container">
         <div class="shop-item">
           <div style="position: relative">
-            <div class="overlay"></div>
+            <div class="overlay-wrap">
+              <div class="overlay"></div>
+            </div>
             <img src="./img/item1.jpeg" />
           </div>
         </div>
