이벤트버블링 마무리

--- a/JavaScript JQuery/detail.html
+++ b/JavaScript JQuery/detail.html
@@ -22,10 +22,9 @@
   <body>
     <div class="container mt-5">
       <ul class="list">
-        <li class="tab-button">Products</li>
-        <li class="tab-button orange">Information</li>
-        <li class="tab-button">Shipping</li>
-        <li class="tab-button">Shipping</li>
+        <li class="tab-button" data-id="0">Products</li>
+        <li class="tab-button orange" data-id="1">Information</li>
+        <li class="tab-button" data-id="2">Shipping</li>
       </ul>
       <div class="tab-content">
         <p>상품설명입니다. Product</p>
@@ -37,7 +36,7 @@
         <p>배송정보입니다. Shipping</p>
       </div>
     </div>
-    <script src="tap.js"></script>
+    <script src="tab.js"></script>
     <!-- bootstrap설치 -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
