--- a/JavaScript JQuery/detail.html
+++ b/JavaScript JQuery/detail.html
@@ -20,6 +20,15 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <div class="container mt-3">
+      <div class="card p-3">상품명 / 가격</div>
+    </div>
+
+    <script>
+      var car = ["sonata", 50000, "red"];
+      console.log(car[2]);
+    </script>
+
     <div class="container mt-5">
       <ul class="list">
         <li class="tab-button" data-id="0">Products</li>
